<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Add Product"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/material_green_700" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_prodcat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price1"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price2"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price3"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price4"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price5"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_green"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="7dp"
                android:text="Add"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_green"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="7dp"
                android:text="Cancel"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>