<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <!--<com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ff66BB6A"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_master"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ff66BB6A"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_master"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ff66BB6A"
                android:gravity="center"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sales_master"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ff66BB6A"
                android:gravity="center"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/order_master"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ff66BB6A"
                android:gravity="center"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/customer_master"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
    </LinearLayout>
        </ScrollView>


</RelativeLayout>
